[package]
name = "symphonic"
edition = "2024"
version.workspace = true

[lib]
name = "HTGameBase"
crate-type = ["cdylib"]

[dependencies]
ilhook.workspace = true

windows = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_Security",
	"Win32_System_SystemServices",
	"Win32_System_SystemInformation",
	"Win32_System_Console"
] }
